# SkillSemi

./: .gitignore  CMakeLists.txt  ChestCT2.mhd  Form1.Designer.cs  Form1.cs  Program.cs  Readme.md  connectDifferentLanguage.csproj  euler_angles.h  main.cpp  mip.cpp  mip.h  opencv.cpp  output2.mhd  output2_output.mhd  path.cpp  path.h  readme.md  receiveCamera.py  ss2408.txt  ss2409-01.csproj  ss2409-01.sln  ss2411-1.vcxproj  ss2411-1.vcxproj.filters  window_parameters.cpp  window_parameters.h
Properties/: AssemblyInfo.cs  Settings.Designer.cs
ss2401-02/: Readme.md  main.py  ss2401-02.py
ss2402-01/: Readme.md  main.py
ss2402-02/: Readme.md  a.py  main.py
ss2403/: Readme.md  face_detector.py  face_processing.py  face_utils.py  gui_app.py  main.py
ss2404-01/: Readme.md  resnet18.py  roc.py  test_classification.py  training_classification.py
ss2405-01/: Readme.md  path_sample  (+1 more)
ss2406/: CMakeLists.txt  Readme.md  image_processing.cpp  main  path.cpp  path.h
ss2406/include/: image_processing.h
ss2406/input/: ProcessingParameter.txt
ss2406/src/: main.cpp
ss2408/: CMakeLists.txt  README.md  path.h  readme.md  ss2408.txt
ss2408/include/: Coordinate3D.h  ImageInfo.h  ImageInfo2D.h  ImageInfo3D.h  MIPGenerator.h  Outputs.h  ProcessingInfo.h  ProcessingInfoParser.h
ss2408/src/: Coordinate3D.cpp  ImageInfo.cpp  ImageInfo2D.cpp  ImageInfo3D.cpp  MIPGenerator.cpp  Outputs.cpp  ProcessingInfo.cpp  ProcessingInfoParser.cpp  main.cpp
ss2411/: CMakeLists.txt  Program.cs  README.md  cameraApp.Designer.cs  cameraApp.cs  cameraApp.csproj  opencv.cpp  receiveCamera.py
ss2411/Properties/: Resources.Designer.cs
ss2411/ss2401-02/: ss2401-02.py
ss2411/ss2402-01/: readme.md  ss2402-01.py
ss2411/ss2402-02/: ss2402-02copy.py
ss2411/ss2403/: model.csv  readme.md  ss2403.py
ss2411/ss2404-01/: Readme.md  loss_log_20241028160044.csv  resnet18.py  roc.py  training_classification2.py
ss2411/ss2405-01/: main.cpp
ss2411/ss2405-02/: Readme.md  deque_stl.cpp  exceptional_server.cpp
ss2411/ss2406/: Readme.md  image_processing.h  main.cpp
ss2411/ss2407/: CMakeLists.txt  readme.md  tricubic_processing.cpp
ss2411/ss2408/: path.cpp
ss2411/ss2409-01/: Calibration.cs  Program.cs  aruco.cs  ico.py
ss2411/ss2410/: Form1.Designer.cs  Form1.cs  Program.cs
ss2411/ss2411/: my_program  opencv.cpp
(+45 files in other folders)
